# shortlist-rm-email-notifier

./: README.md  pyproject.toml
docker/: Dockerfile
rm_email_notifier/: email.py  main.py  models.py
rm_email_notifier/tests/: test_main.py
