[tool.poetry]
name = "shortlist-rm-email-notifier"
version = "0.1.0"
description = "Sends email notifications for accepted profiles"
authors = ["Simon Crowe <simon.r.crowe@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.35.97"
fastapi = { extras = ["standard"], version = ">=0.115.6"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"
pytest-mock = ">=3.14.0"
ipdb = ">=0.13.13"
mypy = ">=1.14.1"
flake8 = ">=7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
